Fix for x axis overflow under scrollbar

--- a/less/responsive.less
+++ b/less/responsive.less
@@ -1,6 +1,10 @@
 // Responsive layouts
 // ==================
 
+body {
+    overflow-x: hidden;
+}
+
 .responsive-large {
     @media all and (min-width:@device-width-large) {
         width:@device-width-large;
